# vc-deps

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  build-deps.sh  fetchurl  install-pybind-dependencies-ubuntu1704.sh  pybindings-ubuntu1704.sh
cmake/: BuildACVD.cmake  BuildBoost.cmake  BuildEigen.cmake  BuildExiv2.cmake  BuildITK.cmake  BuildOpenCV.cmake  BuildSpdlog.cmake  BuildTIFF.cmake  BuildVCG.cmake  BuildVTK.cmake  BuildZLIB.cmake  InstallSDK-macOS.cmake
graphics/: deps-logo.ai
patches/: boost-1.69-macOS-catalina.diff  boost-macOS-user-config.jam.in  exiv2-5118c64-cmake-config.diff  exiv2.0.27.0-cmake-config.diff  exiv2.0.27.0-cmake-libintl.diff  exiv2.0.27.0-include-libintl.diff  itk-5.2.0-fix-gdcm-gcc11.diff  libtiff-c824479e-private-deps.diff  vtk-8.2.0-fix-gcc-10.diff  vtk-8.2.0-fix-qt5.15.diff  vtk-png-optimization.diff
utils/: version-gen.sh
